// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Avatar/Avatar Avatar Playground 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #ffd0e1;
  color: #b2104a;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-2 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #b2104a;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #b2104a;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <span
            className="emotion-5"
            onClick={[Function]}
          >
            <span
              className="emotion-6"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar/Avatar Avatar with icon 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-2 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #1451dc;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  fill: #1451dc;
  width: 1.2000000000000002rem;
  height: 1.2000000000000002rem;
}

.emotion-7 path {
  fill: #1451dc;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  fill: #1451dc;
  width: 1.8rem;
  height: 1.8rem;
}

.emotion-10 path {
  fill: #1451dc;
}

.emotion-11 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.00625rem;
}

.emotion-11 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  fill: #1451dc;
  width: 2.4000000000000004rem;
  height: 2.4000000000000004rem;
}

.emotion-13 path {
  fill: #1451dc;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0rem;
}

.emotion-14 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-16 {
  fill: #1451dc;
  width: 3.2rem;
  height: 3.2rem;
}

.emotion-16 path {
  fill: #1451dc;
}

.emotion-17 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0rem;
}

.emotion-17 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-19 {
  fill: #1451dc;
  width: 4.4rem;
  height: 4.4rem;
}

.emotion-19 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-8"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-11"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-13"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-14"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-16"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-17"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-19"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar/Avatar Avatar with letter 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-2 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: 0.015625rem;
}

.emotion-3 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0.015625rem;
}

.emotion-4 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.00625rem;
}

.emotion-5 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0rem;
}

.emotion-6 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0rem;
}

.emotion-7 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-6"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-7"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar/Avatar Avatar with src 1`] = `
.emotion-0 {
  m: 6;
  margin: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-2 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: 0.015625rem;
}

.emotion-3 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0.015625rem;
}

.emotion-4 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.00625rem;
}

.emotion-5 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0rem;
}

.emotion-6 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0rem;
}

.emotion-7 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-6"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-7"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
